[package]
name = "inputparser"
version = "0.1.72"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/giripriyadarshan/inputparser"
homepage = "https://crates.io/crates/inputparser"
description = "Terminal inputs made psuedo code like simple, like Python like simple ...... probably xD"
license = "MIT"
keywords = ["input","error-handling","terminal","custom-messages","recoverable-errors"]
categories = ["command-line-interface","parsing","command-line-utilities"]
exclude = ["target/**",".gitignore",".github/**","LICENSE-MIT",".idea/**"]
edition = "2018"

[dependencies]